# FreezeitVS

./: .gitignore  CMakeLists.txt  README.md  freezeitVS.sln  version.cmake
FreezeitVS/: CMakeLists.txt  build_ARM64.ps1  build_pack.ps1  build_x64.ps1  changelog.md  changelogFull.txt  freezeit.hpp  freezeitVS.vcxproj  freezeitVS.vcxproj.filters  freezer.hpp  managedApp.hpp  ndk.cmake  settings.hpp  utils.hpp
FreezeitVS/magisk/: changelog.md  changelog.txt  customize.sh  module.prop
FreezeitVS/note/: freezeit_logo_svg.txt
freezeitVS/: build_ARM64.ps1  build_pack.ps1  build_x64.ps1  changelog.txt  changelogFull.txt  cpp.hint  freezeit.hpp  freezeitVS.vcxproj  freezeitVS.vcxproj.filters  freezer.hpp  main.cpp  managedApp.hpp  post-fs-data.sh  settings.hpp  system1.prop  systemTools.hpp  utils.hpp
freezeitVS/include/: doze.hpp  freezeit.hpp  freezer.cpp  freezer.hpp  managedApp.hpp  server.hpp  settings.hpp  systemTools.hpp
freezeitVS/magisk/: applabel.txt  changelog.txt  customize.sh  freezerlmk.sh  module.prop  service.sh  system.prop  test.sh
freezeitVS/src/: main.cpp
